Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9961

Flickable viewport position does not update correctly

XMLWordPrintable

    • 4e9a4ff3f191094b27a5ab4ef56fcd078a0bc124

      See attached QML.

      1. Flick so as to look at bottom-right of big blue rectangle
      2. Click "-" rapidly 3 times (shrinks rectangle)
      3. Observe rectangle is out of normal permitted bounds

      Originally reproduced in flickr demo.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            wallison Warwick Allison (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes