Always allow view position to be fixed. We used to avoid doing fixup in a direction we were not flicking.  This was pointless, and caused bugs when the view transitioned from flickable to not flickable, e.g. by content size change. Fixup following content size is also no longer animated.  This can be acheived using a behavoir, for example.

Task-number: QTBUG-9961